# kcli

./: .gitignore  CMakeLists.txt  README.md  kbuild.json  kbuild.md  kbuild.py
agent/: BOOTSTRAP.md
agent/projects/: dead-code.md  ktrace-migration.md
cmake/: 00_toolchain.cmake  10_dependencies.cmake  20_targets.cmake  50_install_export.cmake  KcliSDKConfig.cmake.in
cmake/tests/: CMakeLists.txt  kcli_api_cases.cpp
demo/: README.md
demo/bootstrap/: CMakeLists.txt
demo/bootstrap/src/: main.cpp
demo/exe/core/: CMakeLists.txt
demo/exe/core/cmake/tests/: CMakeLists.txt  demo_cli_cases.sh
demo/exe/core/src/: main.cpp
demo/exe/omega/: CMakeLists.txt
demo/exe/omega/cmake/tests/: CMakeLists.txt  demo_cli_cases.sh
demo/exe/omega/src/: main.cpp
demo/executable/: CMakeLists.txt  README.md
demo/executable/cmake/tests/: CMakeLists.txt  demo_cli_cases.sh
demo/executable/src/: main.cpp
demo/libraries/alpha/: CMakeLists.txt  README.md
demo/libraries/alpha/cmake/: AlphaSDKConfig.cmake.in
demo/libraries/alpha/src/: cli.cpp
demo/libraries/beta/: CMakeLists.txt  README.md
demo/libraries/beta/cmake/: BetaSDKConfig.cmake.in
demo/libraries/beta/src/: cli.cpp
demo/libraries/gamma/: CMakeLists.txt  README.md
demo/libraries/gamma/cmake/: GammaSDKConfig.cmake.in
demo/libraries/gamma/include/gamma/: sdk.hpp
demo/libraries/gamma/src/: cli.cpp
demo/sdk/alpha/: CMakeLists.txt
demo/sdk/alpha/include/alpha/: sdk.hpp
demo/sdk/alpha/src/: cli.cpp
demo/sdk/beta/: CMakeLists.txt
demo/sdk/beta/include/beta/: sdk.hpp
demo/sdk/beta/src/: cli.cpp
demo/sdk/gamma/include/gamma/: sdk.hpp
demo/sdk/gamma/src/: cli.cpp
docs/: api.md  behavior.md  examples.md  index.md
include/: kcli.hpp
src/: kcli.cpp
src/kcli/: backend.hpp  impl.cpp  impl.hpp  process.cpp  util.cpp  util.hpp
tests/: demo_cli_cases.sh
vcpkg/: vcpkg-configuration.json  vcpkg.json
